# VE482_FA2021

./: .gitignore  .gitmodules  Midterm Review.md  README.md
Midterm Review/: Banker's Algorithm.md  Barrier.md  Midterm Review.md  Monitor.md  Sleeping Barber Problem.md
h1/: 1.5.sh  VE482 Homework 1.md
h2/: 1.eps  Homework2.aux  Homework2.tex  README_dmp.c.md  README_dmp_kernel.c.md  README_h2ex1.m.md  README_proto.h.md  dmp.c  dmp_kernel.c  h2ex1.m  proto.h
h2/_minted-Homework2/: 636AF1AEF44BA1F4779782F12FB7E255F8DD676F17BE65E7606B8A10B567AE68.pygtex  A3F587023BDE137F78EC20A675012B24F8DD676F17BE65E7606B8A10B567AE68.pygtex  DC585462AB534564511ACB6187DB5CABB0942ECD22322F0B0D936BD4C38012DA.pygtex  DDAF8FC0BB76DDED0B46FC24E0161B42F8DD676F17BE65E7606B8A10B567AE68.pygtex
h3/: Homework3.tex  README.md  forward_list.c  h3.c  h3.h  h3ex2.py  test.c
h3/old_version/: forward_list.h  h3.c
h4/: Homework4.aux  Homework4.tex  cthread.c  ex3-1.md  ex3-1.sh  ex3-2.md  ex3-2.sh  ex4.c  ex4.md
h4/_minted-Homework4/: 3DC5196068EDDD5FD8101ED7D710FDBF9B47E4F8C97BF5FC952B6A9B82436021.pygtex  F1FB823243E4495A1B1ECCE8E19A6D159B47E4F8C97BF5FC952B6A9B82436021.pygtex
h5/: Homework5.aux  Homework5.tex  README.md  h5ex3.c
h5/_minted-Homework5/: 049D30C162269744641E418EADE70F966C84C055CB5B1BAC59ADB0A1E66FBE7D.pygtex  B4CB146DCE455D10E9767D3D653D935AEB8740AAD8CB558556830FECCF325D70.pygtex  D6D1A4128562AE74255293D0242C0912EB8740AAD8CB558556830FECCF325D70.pygtex  E971361D9174A0E79460129F02A41728EB8740AAD8CB558556830FECCF325D70.pygtex  EAA78A398181DEEA93EC7C7AB9210FC7EB8740AAD8CB558556830FECCF325D70.pygtex
h6/: Homework6.aux  Homework6.bbl  Homework6.bib  Homework6.blg  Homework6.run.xml  Homework6.tex  README.md  h6ex4.c
h7/: Corrections.md  Homework7.aux  Homework7.bbl  Homework7.bib  Homework7.blg  Homework7.run.xml  Homework7.tex
h7/src/: callnr.h  proto.h  table.c  (+1 more)
h8/: Homework8.md
l1/: Lab1.aux  Lab1.bbl  Lab1.bcf  Lab1.bib  Lab1.blg  Lab1.run.xml  Lab1.tex  l1.sh  onimage.ins
l2/: Lab2.aux  Lab2.bbl  Lab2.bib  Lab2.blg  Lab2.run.xml  Lab2.tex  [Lab 2] Fixes to certain Minix 3.2.1 issues.txt
l3/: 2.1.sh  2.2.sh  3.1.sh  3.2.sh  Lab3.aux  Lab3.bbl  Lab3.bib  Lab3.blg  Lab3.run.xml  Lab3.tex  l3.txt
l4/: Lab4.aux  Lab4.bbl  Lab4.bib  Lab4.blg  Lab4.out  Lab4.run.xml  Lab4.tex  db.csv
l5/: Lab5.aux  Lab5.bbl  Lab5.bib  Lab5.blg  Lab5.out  Lab5.run.xml  Lab5.tex  Makefile  forward_list.c  forward_list.h  h3  h3.c  h3.h  l5.py  lab5_dlist_old.c  lab5_dlist_p2p.c  main.c
l5/ex2/: CMakeLists.txt  Makefile  README.md  algorithm.h  lab5_dlist.c  lab5_dlist.h  main.c
l6/: Lab6.aux  Lab6.out  Lab6.tex
p1/: CMakeLists.txt  README.md  p1.c  p1.h  p1.md  strcpbrk_test.cpp
p1pre/: main.tex
p2/: sid.out
p2/p2-group-02/src/: CMakeLists.txt  main.cpp
p2/p2-group-02/src/db/: Table.cpp
p2/p2-group-02/src/multiThread/: MultiThread.h  Reducer.h  ThreadPool.h
p2/p2-group-02/src/query/: Query.h  QueryBuilders.cpp  QueryResult.h
p2/p2-group-02/src/query/data/: InsertQuery.cpp  MaxQuery.h  SelectQuery.cpp  SelectQuery.h  SubQuery.cpp  SwapQuery.cpp  UpdateQuery.cpp
p2/p2-group-02/src/query/management/: CopyTableQuery.cpp  DumpTableQuery.cpp  LoadTableQuery.cpp  TruncateTableQuery.cpp  TruncateTableQuery.h
p2pre/: [labs 5, 6, 7 & p2] P2 presentations.txt  main.tex  p2pre.bib
p3/: edf-test-result.txt  edf.c  lottery-test-result.txt  lottery.c  p3-group-02.patch
p3pre/: 1.vsdx  p3pre.bib  p3pre.tex
(+177 files in other folders)
